2009-03-26  Eric Carlson  <eric.carlson@apple.com>

        Reviewed by Simon Fraser.

        https://bugs.webkit.org/show_bug.cgi?id=24874
        24874: HTMLMediaElement: 'duration' defaults to NaN, deal with it
        
        The 'duration' attribute is NaN when no media is available, so the
        media element should take care when comparing with duration().

        * html/HTMLMediaElement.cpp:
        (WebCore::HTMLMediaElement::mediaPlayerTimeChanged): Don't compare with duration when
        it is NaN.
        (WebCore::HTMLMediaElement::endedPlayback): Ditto.

2009-03-26  Mark Rowe  <mrowe@apple.com>

        Fix the build.

        * platform/text/TextEncodingDetectorICU.cpp:
        * platform/text/TextEncodingDetectorNone.cpp:

2009-03-26  Jungshik Shin  <jshin@chromium.org>

        Reviewed by Cameron Zwarich.

        1. Fix the crash in setHintEncoding
        2. Fix build failures on Tiger and Qt.
        UnusedParam.h was not included by TextEncodingDetector{None,ICU}.cpp
        in the patch landed in r42023
        for http://bugs.webkit.org/show_bug.cgi?id=16482

        * loader/TextResourceDecoder.h:
        (WebCore::TextResourceDecoder::setHintEncoding):
        * platform/text/TextEncodingDetectorICU.cpp:
        * platform/text/TextEncodingDetectorNone.cpp:

2009-03-26  Simon Fraser  <simon.fraser@apple.com>

        Build fix when ACCELERATED_COMPOSITING is turned on.

        * rendering/RenderLayerBacking.cpp:
        (WebCore::RenderLayerBacking::canUseDirectCompositing):

2009-03-26  Eric Seidel  <eric@webkit.org>

        No additional review, committing previously reviewed files for build fix only.

        Add files I missed when commiting Jungshik's patch in r42022.
        https://bugs.webkit.org/show_bug.cgi?id=16482

        * icu/unicode/ucsdet.h: Added.
        * platform/text/TextEncodingDetector.h: Added.
        * platform/text/TextEncodingDetectorICU.cpp: Added.
        (WebCore::detectTextEncoding):